# SDL2-CMake-Starter

./: CMakeLists.txt  LICENCE  README.md
.github/workflows/: build-project.yml  cross-build.yml
src/: main.cpp
